compiler-core/src/parse/snapshots/gleam_core__parse__tests__function_type_invalid_param_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn f(g: fn(Int, 1) -> Int) -> Int {\n  g(0, 1)\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:17
  │
2 │ fn f(g: fn(Int, 1) -> Int) -> Int {
  │                 ^ I was not expecting this

Found `1`, expected one of: 
`)`
a type
